<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/textBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.address.line1}"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
            android:hint="@string/address_line1"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />


        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@{viewmodel.address.line2}"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_APT_NUMBER"
            android:hint="@string/address_line2"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.address.city}"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_LOCALITY"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            stateValue="@{viewmodel.address.state}"
            android:layout_height="0dp"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_REGION"
            android:entries="@array/states"
            android:hint="@string/state"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />


        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.address.zip}"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS_EXTENDED_POSTAL_CODE"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />


        <Button
            android:id="@+id/button_search"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />


        <Button
            android:id="@+id/button_location"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_search" />


        <TextView
            android:id="@+id/representative_title"
            style="@style/textBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representative"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_half"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:listRepresentativeData="@{viewmodel.representatives}"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />



    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>